# AkhilaPrime_HR_helpdesk

./: .env.example  .gitignore  INTERN_SETUP.md  README.md  START_HERE.md  compose.yaml  pyproject.toml  requirements.txt
docs/: AI_Tool_Usage_Policy.md  Attendance_Policy.md  Background_Verification_Policy.md  Compensation_and_Benefits_Policy.md  Data_Protection_and_Confidentiality_Policy.md  Disciplinary_Policy.md  Diversity_Equity_and_Inclusion_Policy.md  ESOP_Policy.md  Employee_Code_of_Conduct_Policy.md  Employee_Onboarding_Guide.md  Employee_Promotion_Policy.md  Employee_Referral_Policy.md  Grievance_Redressal_Policy.md  Group_Health_Insurance_and_Mediclaim_Policy.md  HR_Glossary.md  IT_Asset_and_Equipment_Policy.md  Internal_Transfer_Policy.md  Leave_Policy.md  Moonlighting_and_Conflict_of_Interest_Policy.md  POSH_Policy.md  Payroll_and_Salary_Processing_Policy.md  Performance_Improvement_Plan_Process.md  Performance_Review_Policy.md  Probation_and_Confirmation_Policy.md  Resignation_and_Exit_Policy.md  Rewards_and_Recognition_Policy.md  Salary_Advance_Policy.md  Training_and_Learning_Development_Policy.md  Travel_and_Expense_Policy.md  Whistleblower_Policy.md  Work_From_Home_Policy.md
hr_helpdesk/: PIPELINE.md  __init__.py  main.py  step1_chunking.py  step2_indexing.py  step3_retriever.py  step4_app.py  step5_tools.py  step6_agent.py
